使用 Colaboratory 建立

--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVGPesw4Vajf32aSSZ0Kgt",
+      "authorship_tag": "ABX9TyPTcnz9aS1SmEnD65fBwrmu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,21 +28,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "YpuWRYGjchag"
-      },
-      "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "from hmmlearn import hmm"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#https://medium.com/@natsunoyuki/hidden-markov-models-with-python-c026f778dfa7\n",
+        "#裝完記得要重開\n",
         "!pip install hmmlearn"
       ],
       "metadata": {
@@ -67,6 +55,21 @@
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.16->hmmlearn) (3.1.0)\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "YpuWRYGjchag"
+      },
+      "outputs": [],
+      "source": [
+        "#import 套件\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "from hmmlearn import hmm"
       ]
     },
     {
